[gd_scene load_steps=13 format=3 uid="uid://b6k6ooc3nqlqe"]

[ext_resource type="Script" path="res://scenes/maps/acceuil_et_portes.gd" id="1_y5okk"]
[ext_resource type="TileSet" uid="uid://bvixruinodwkl" path="res://scenes/maps/salles.tres" id="2_awixh"]
[ext_resource type="PackedScene" uid="uid://c2e12uwd7qwk3" path="res://scenes/player/player.tscn" id="4_1g3ia"]
[ext_resource type="PackedScene" uid="uid://bh0hqw7l3ih45" path="res://scenes/npc/secretaire.tscn" id="4_wt7sr"]
[ext_resource type="Texture2D" uid="uid://b3kyrbsljuhpq" path="res://assets/Modern tiles_Free/free_overview.png" id="5_x8riy"]
[ext_resource type="PackedScene" uid="uid://u02rpxkw284m" path="res://scenes/npc/reservation_secretaire.tscn" id="6_a50yp"]

[sub_resource type="Animation" id="Animation_buagh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 105)]
}

[sub_resource type="Animation" id="Animation_dlfjk"]
resource_name = "game_start"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.7, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 105), Vector2(1, -36), Vector2(23, -40)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"interact_secretaire"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("player:interacting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("player:move_direction")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.7, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("player:state")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4cc1t"]
_data = {
"RESET": SubResource("Animation_buagh"),
"game_start": SubResource("Animation_dlfjk")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qiqbo"]
size = Vector2(16, 11)

[sub_resource type="LabelSettings" id="LabelSettings_spnq7"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_nyt17"]
font_size = 128
font_color = Color(0.290645, 0.539624, 0.634306, 1)

[node name="acceuil_et_portes" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_y5okk")

[node name="fondu" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
z_index = 1
offset_left = -198.0
offset_top = -112.0
offset_right = 199.0
offset_bottom = 117.0
color = Color(0.0705882, 0.0705882, 0.0705882, 1)

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
texture_filter = 1
tile_set = ExtResource("2_awixh")
format = 2
layer_0/name = "Elements"
layer_0/y_sort_enabled = true
layer_0/tile_data = PackedInt32Array(-196610, 851968, 4, -196609, 720896, 3, -262144, 720896, 3, -262143, 851968, 4, -196611, 655360, 3, -262142, 786432, 3, -262147, 655360, 2, -327678, 786432, 2, -327679, 851968, 3, -262146, 851968, 3, -393214, 786432, 2, -327683, 655360, 2, 196619, 786432, 45, 262132, 786432, 45, 458745, 786432, 45, -65548, 786432, 45, -131061, 786432, 45, 458742, 196608, 74, 393204, 196608, 74, 458747, 196608, 74, 393220, 196608, 74, 393225, 196608, 74, 327691, 196608, 74, 11, 196608, 74, 65524, 196608, 74, -65528, 327680, 76, 65544, 327680, 76, -7, 327680, 76, 131065, 327680, 76, -327685, 458758, 9, -327691, 458754, 9, -327688, 458756, 9, -393212, 458757, 9, -393209, 458760, 9, -393206, 458759, 9, -458742, 458759, 8, -458745, 458760, 8, -458748, 458757, 8, -393221, 458758, 8, -393224, 458756, 8, -393227, 458754, 8, -393213, 983040, 8, -393210, 983040, 8, -393207, 983040, 8, -327684, 983040, 8, -327687, 983040, 8, -327690, 983040, 8, -458743, 983040, 7, -458746, 983040, 7, -458749, 983040, 7, -393220, 983040, 7, -393223, 983040, 7, -393226, 983040, 7, -327669, 786432, 56, -262156, 786432, 56, 393223, 786432, 45, -9, 196608, 76, 131063, 196608, 76, -65530, 196608, 76, 65542, 196608, 76)
layer_1/name = "Ground"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = -2
layer_1/tile_data = PackedInt32Array(-393228, 1, 17, -327692, 1, 18, -262156, 786433, 12, -196620, 786433, 12, -131084, 786433, 12, -65548, 786433, 12, -12, 786433, 12, 65524, 786433, 12, 131060, 786433, 12, 196596, 786433, 12, 262132, 786433, 12, 327668, 786433, 12, 393204, 786433, 12, 458740, 786433, 12, -393227, 65537, 17, -327691, 65537, 18, -262155, 786433, 12, -196619, 786433, 12, -131083, 786433, 12, -65547, 786433, 12, -11, 786433, 12, 65525, 786433, 12, 131061, 786433, 12, 196597, 786433, 12, 262133, 786433, 12, 327669, 786433, 12, 393205, 786433, 12, 458741, 786433, 12, -393226, 65537, 17, -327690, 65537, 18, -262154, 786433, 12, -196618, 786433, 12, -131082, 786433, 12, -65546, 786433, 12, -10, 786433, 12, 65526, 786433, 12, 131062, 786433, 12, 196598, 786433, 12, 262134, 786433, 12, 327670, 786433, 12, 393206, 786433, 12, 458742, 786433, 12, -393225, 65537, 17, -327689, 65537, 18, -262153, 786433, 12, -196617, 786433, 12, -131081, 786433, 12, -65545, 786433, 12, -9, 786433, 12, 65527, 786433, 12, 131063, 786433, 12, 196599, 786433, 12, 262135, 786433, 12, 327671, 786433, 12, 393207, 786433, 12, 458743, 786433, 12, -393224, 65537, 17, -327688, 65537, 18, -262152, 786433, 12, -196616, 786433, 12, -131080, 786433, 12, -65544, 786433, 12, -8, 786433, 12, 65528, 786433, 12, 131064, 786433, 12, 196600, 786433, 12, 262136, 786433, 12, 327672, 786433, 12, 393208, 786433, 12, 458744, 786433, 12, -393223, 65537, 17, -327687, 65537, 18, -262151, 786433, 12, -196615, 786433, 12, -131079, 786433, 12, -65543, 786433, 12, -7, 786433, 12, 65529, 786433, 12, 131065, 786433, 12, 196601, 786433, 12, 262137, 786433, 12, 327673, 786433, 12, 393209, 786433, 12, 458745, 786433, 12, -393222, 65537, 17, -327686, 65537, 18, -262150, 786433, 12, -196614, 786433, 12, -131078, 786433, 12, -65542, 786433, 12, -6, 786433, 12, 65530, 786433, 12, 131066, 786433, 12, 196602, 786433, 12, 262138, 786433, 12, 327674, 786433, 12, 393210, 786433, 12, 458746, 786433, 12, -393221, 65537, 17, -327685, 65537, 18, -262149, 786433, 12, -196613, 786433, 12, -131077, 786433, 12, -65541, 786433, 12, -5, 786433, 12, 65531, 786433, 12, 131067, 786433, 12, 196603, 786433, 12, 262139, 786433, 12, 327675, 786433, 12, 393211, 786433, 12, 458747, 786433, 12, -393220, 65537, 17, -327684, 65537, 18, -262148, 786433, 12, -196612, 786433, 12, -131076, 786433, 12, -65540, 786433, 12, -4, 786433, 12, 65532, 786433, 12, 131068, 786433, 12, 196604, 786433, 12, 262140, 786433, 12, 327676, 786433, 12, 393212, 786433, 12, 458748, 786433, 12, -393219, 65537, 17, -327683, 65537, 18, -262147, 786433, 12, -196611, 786433, 12, -131075, 786433, 12, -65539, 786433, 12, -3, 786433, 12, 65533, 786433, 12, 131069, 786433, 12, 196605, 786433, 12, 262141, 786433, 12, 327677, 786433, 12, 393213, 786433, 12, 458749, 786433, 12, -393218, 65537, 17, -327682, 65537, 18, -262146, 786433, 12, -196610, 786433, 12, -131074, 786433, 12, -65538, 786433, 12, -2, 786433, 12, 65534, 786433, 12, 131070, 786433, 12, 196606, 786433, 12, 262142, 786433, 12, 327678, 786433, 12, 393214, 786433, 12, 458750, 786433, 12, -393217, 65537, 17, -327681, 65537, 18, -262145, 786433, 12, -196609, 786433, 12, -131073, 786433, 12, -65537, 786433, 12, -1, 786433, 12, 65535, 786433, 12, 131071, 786433, 12, 196607, 786433, 12, 262143, 786433, 12, 327679, 786433, 12, 393215, 786433, 12, 458751, 786433, 12, -458752, 65537, 17, -393216, 65537, 18, -327680, 786433, 12, -262144, 786433, 12, -196608, 786433, 12, -131072, 786433, 12, -65536, 786433, 12, 0, 786433, 12, 65536, 786433, 12, 131072, 786433, 12, 196608, 786433, 12, 262144, 786433, 12, 327680, 786433, 12, 393216, 786433, 12, -458751, 65537, 17, -393215, 65537, 18, -327679, 786433, 12, -262143, 786433, 12, -196607, 786433, 12, -131071, 786433, 12, -65535, 786433, 12, 1, 786433, 12, 65537, 786433, 12, 131073, 786433, 12, 196609, 786433, 12, 262145, 786433, 12, 327681, 786433, 12, 393217, 786433, 12, -458750, 65537, 17, -393214, 65537, 18, -327678, 786433, 12, -262142, 786433, 12, -196606, 786433, 12, -131070, 786433, 12, -65534, 786433, 12, 2, 786433, 12, 65538, 786433, 12, 131074, 786433, 12, 196610, 786433, 12, 262146, 786433, 12, 327682, 786433, 12, 393218, 786433, 12, -458749, 65537, 17, -393213, 65537, 18, -327677, 786433, 12, -262141, 786433, 12, -196605, 786433, 12, -131069, 786433, 12, -65533, 786433, 12, 3, 786433, 12, 65539, 786433, 12, 131075, 786433, 12, 196611, 786433, 12, 262147, 786433, 12, 327683, 786433, 12, 393219, 786433, 12, -458748, 65537, 17, -393212, 65537, 18, -327676, 786433, 12, -262140, 786433, 12, -196604, 786433, 12, -131068, 786433, 12, -65532, 786433, 12, 4, 786433, 12, 65540, 786433, 12, 131076, 786433, 12, 196612, 786433, 12, 262148, 786433, 12, 327684, 786433, 12, 393220, 786433, 12, -458747, 65537, 17, -393211, 65537, 18, -327675, 786433, 12, -262139, 786433, 12, -196603, 786433, 12, -131067, 786433, 12, -65531, 786433, 12, 5, 786433, 12, 65541, 786433, 12, 131077, 786433, 12, 196613, 786433, 12, 262149, 786433, 12, 327685, 786433, 12, 393221, 786433, 12, -458746, 65537, 17, -393210, 65537, 18, -327674, 786433, 12, -262138, 786433, 12, -196602, 786433, 12, -131066, 786433, 12, -65530, 786433, 12, 6, 786433, 12, 65542, 786433, 12, 131078, 786433, 12, 196614, 786433, 12, 262150, 786433, 12, 327686, 786433, 12, 393222, 786433, 12, -458745, 65537, 17, -393209, 65537, 18, -327673, 786433, 12, -262137, 786433, 12, -196601, 786433, 12, -131065, 786433, 12, -65529, 786433, 12, 7, 786433, 12, 65543, 786433, 12, 131079, 786433, 12, 196615, 786433, 12, 262151, 786433, 12, 327687, 786433, 12, 393223, 786433, 12, -458744, 65537, 17, -393208, 65537, 18, -327672, 786433, 12, -262136, 786433, 12, -196600, 786433, 12, -131064, 786433, 12, -65528, 786433, 12, 8, 786433, 12, 65544, 786433, 12, 131080, 786433, 12, 196616, 786433, 12, 262152, 786433, 12, 327688, 786433, 12, 393224, 786433, 12, -458743, 65537, 17, -393207, 65537, 18, -327671, 786433, 12, -262135, 786433, 12, -196599, 786433, 12, -131063, 786433, 12, -65527, 786433, 12, 9, 786433, 12, 65545, 786433, 12, 131081, 786433, 12, 196617, 786433, 12, 262153, 786433, 12, 327689, 786433, 12, 393225, 786433, 12, -458742, 65537, 17, -393206, 65537, 18, -327670, 786433, 12, -262134, 786433, 12, -196598, 786433, 12, -131062, 786433, 12, -65526, 786433, 12, 10, 786433, 12, 65546, 786433, 12, 131082, 786433, 12, 196618, 786433, 12, 262154, 786433, 12, 327690, 786433, 12, 393226, 786433, 12, -458741, 131073, 17, -393205, 131073, 18, -327669, 786433, 12, -262133, 786433, 12, -196597, 786433, 12, -131061, 786433, 12, -65525, 786433, 12, 11, 786433, 12, 65547, 786433, 12, 131083, 786433, 12, 196619, 786433, 12, 262155, 786433, 12, 327691, 786433, 12, 393227, 786433, 12, -327693, 720897, 2, -393229, 720897, 1, -262157, 720897, 2, -196621, 720897, 2, -131085, 720897, 2, -65549, 720897, 2, -13, 720897, 2, 65523, 720897, 2, 131059, 720897, 2, 196595, 720897, 2, 262131, 720897, 2, 327667, 720897, 2, 393203, 720897, 2, 458739, 720897, 2, 524275, 720897, 3, 524276, 786433, 3, 524277, 786433, 3, 524278, 786433, 3, 524279, 786433, 3, 524280, 786433, 3, 524281, 786433, 3, 524282, 786433, 3, 524283, 786433, 3, 524284, 786433, 3, 524285, 786433, 3, 524286, 786433, 3, 458753, 786433, 3, 458754, 786433, 3, 458755, 786433, 3, 458756, 786433, 3, 458757, 786433, 3, 458758, 786433, 3, 458759, 786433, 3, 458760, 786433, 3, 458761, 786433, 3, 458762, 786433, 3, 458763, 786433, 3, 458764, 851969, 3, 393228, 851969, 2, 327692, 851969, 2, 262156, 851969, 2, 196620, 851969, 2, 131084, 851969, 2, 65548, 851969, 2, 12, 851969, 2, -65524, 851969, 2, -131060, 851969, 2, -196596, 851969, 2, -262132, 851969, 2, -327668, 851969, 2, -393204, 851969, 2, -458740, 851969, 1, 524287, 786433, 3, 458752, 786433, 3)
layer_2/name = "Tapis"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = -1
layer_2/tile_data = PackedInt32Array(327680, 917504, 19, 393215, 917504, 19, 327679, 917504, 18, 262144, 917504, 18, -1, 917504, 17, -65536, 917504, 17, -65537, 917504, 16, -131072, 917504, 16, -131071, 983040, 16, -65538, 851968, 16, 393214, 851968, 19, 327681, 983040, 19, 196608, 917504, 15, 131072, 917504, 15, 65536, 917504, 15, 0, 917504, 15, 65535, 917504, 15, 131071, 917504, 15, 196607, 917504, 15, 262143, 917504, 15, -2, 851968, 17, 65534, 851968, 17, 131070, 851968, 17, 196606, 851968, 17, 262142, 851968, 17, 327678, 851968, 17, 262145, 983040, 17, 196609, 983040, 17, 131073, 983040, 17, 65537, 983040, 17, 1, 983040, 17, -65535, 983040, 17)

[node name="Secretaire" parent="." instance=ExtResource("4_wt7sr")]
unique_name_in_owner = true
position = Vector2(22, -67)

[node name="player" parent="." instance=ExtResource("4_1g3ia")]
position = Vector2(0, 105)
interacting = true
state = 1
move_direction = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_4cc1t")
}

[node name="porte_DrZen" type="Area2D" parent="."]
position = Vector2(-168, -85)
metadata/_edit_group_ = true

[node name="collision" type="CollisionShape2D" parent="porte_DrZen"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_qiqbo")

[node name="panneau" type="Sprite2D" parent="porte_DrZen"]
position = Vector2(16, -10.5)
scale = Vector2(0.333333, 0.269231)
texture = ExtResource("5_x8riy")
region_enabled = true
region_rect = Rect2(1043, 86, 30, 26)
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="porte_DrZen/panneau"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -26.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "10"
label_settings = SubResource("LabelSettings_spnq7")

[node name="filter" type="ColorRect" parent="porte_DrZen"]
modulate = Color(0.827451, 0.454902, 0.827451, 0)
offset_left = -8.0
offset_top = -24.0
offset_right = 8.0
offset_bottom = 5.0

[node name="porte_DrDroy" type="Area2D" parent="."]
position = Vector2(-120, -85)
metadata/_edit_group_ = true

[node name="collision" type="CollisionShape2D" parent="porte_DrDroy"]
shape = SubResource("RectangleShape2D_qiqbo")

[node name="panneau" type="Sprite2D" parent="porte_DrDroy"]
position = Vector2(16, -10.25)
scale = Vector2(0.333333, 0.25)
texture = ExtResource("5_x8riy")
region_enabled = true
region_rect = Rect2(1043, 86, 30, 26)
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="porte_DrDroy/panneau"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -26.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "10"
label_settings = SubResource("LabelSettings_spnq7")

[node name="filter" type="ColorRect" parent="porte_DrDroy"]
modulate = Color(0.827451, 0.454902, 0.827451, 0)
offset_left = -8.0
offset_top = -24.0
offset_right = 8.0
offset_bottom = 5.0

[node name="porte_DrZimZim" type="Area2D" parent="."]
position = Vector2(-72, -85)
metadata/_edit_group_ = true

[node name="collision" type="CollisionShape2D" parent="porte_DrZimZim"]
shape = SubResource("RectangleShape2D_qiqbo")

[node name="panneau" type="Sprite2D" parent="porte_DrZimZim"]
position = Vector2(16, -10.5)
scale = Vector2(0.333333, 0.269231)
texture = ExtResource("5_x8riy")
region_enabled = true
region_rect = Rect2(1043, 86, 30, 26)
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="porte_DrZimZim/panneau"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -26.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "10"
label_settings = SubResource("LabelSettings_spnq7")

[node name="filter" type="ColorRect" parent="porte_DrZimZim"]
modulate = Color(0.827451, 0.454902, 0.827451, 0)
offset_left = -8.0
offset_top = -24.0
offset_right = 8.0
offset_bottom = 5.0

[node name="porte_DrChirurgien" type="Area2D" parent="."]
position = Vector2(72, -84)
metadata/_edit_group_ = true

[node name="collision" type="CollisionShape2D" parent="porte_DrChirurgien"]
shape = SubResource("RectangleShape2D_qiqbo")

[node name="panneau" type="Sprite2D" parent="porte_DrChirurgien"]
position = Vector2(-16, -11.5)
scale = Vector2(0.333333, 0.269231)
texture = ExtResource("5_x8riy")
region_enabled = true
region_rect = Rect2(1043, 86, 30, 26)
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="porte_DrChirurgien/panneau"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -26.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "10"
label_settings = SubResource("LabelSettings_spnq7")

[node name="filter" type="ColorRect" parent="porte_DrChirurgien"]
modulate = Color(0.827451, 0.454902, 0.827451, 0)
offset_left = -8.0
offset_top = -24.0
offset_right = 8.0
offset_bottom = 5.0

[node name="porte_DrPsy" type="Area2D" parent="."]
position = Vector2(120, -84)
metadata/_edit_group_ = true

[node name="collision" type="CollisionShape2D" parent="porte_DrPsy"]
shape = SubResource("RectangleShape2D_qiqbo")

[node name="panneau" type="Sprite2D" parent="porte_DrPsy"]
position = Vector2(-16, -11.5)
scale = Vector2(0.333333, 0.269231)
texture = ExtResource("5_x8riy")
region_enabled = true
region_rect = Rect2(1043, 86, 30, 26)
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="porte_DrPsy/panneau"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -26.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "10"
label_settings = SubResource("LabelSettings_spnq7")

[node name="filter" type="ColorRect" parent="porte_DrPsy"]
modulate = Color(0.827451, 0.454902, 0.827451, 0)
offset_left = -8.0
offset_top = -24.0
offset_right = 8.0
offset_bottom = 5.0

[node name="porte_DrFamille" type="Area2D" parent="."]
position = Vector2(168, -84)
metadata/_edit_group_ = true

[node name="collision" type="CollisionShape2D" parent="porte_DrFamille"]
shape = SubResource("RectangleShape2D_qiqbo")

[node name="panneau" type="Sprite2D" parent="porte_DrFamille"]
position = Vector2(-16, -11.5)
scale = Vector2(0.333333, 0.269231)
texture = ExtResource("5_x8riy")
region_enabled = true
region_rect = Rect2(1043, 86, 30, 26)
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="porte_DrFamille/panneau"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -26.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "10"
label_settings = SubResource("LabelSettings_spnq7")

[node name="filter" type="ColorRect" parent="porte_DrFamille"]
modulate = Color(0.827451, 0.454902, 0.827451, 0)
offset_left = -8.0
offset_top = -24.0
offset_right = 8.0
offset_bottom = 5.0

[node name="fondu_timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.01
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="round_label" type="Label" parent="CanvasLayer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -429.0
offset_right = 429.0
offset_bottom = 61.0
grow_horizontal = 2
label_settings = SubResource("LabelSettings_nyt17")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
text_direction = 1

[node name="fondu_label" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.01
one_shot = true

[node name="reservation_secretaire" parent="." instance=ExtResource("6_a50yp")]
position = Vector2(-24, -68)

[connection signal="body_entered" from="porte_DrZen" to="." method="_on_porte_dr_zen_body_entered"]
[connection signal="body_entered" from="porte_DrDroy" to="." method="_on_porte_dr_droy_body_entered"]
[connection signal="body_entered" from="porte_DrZimZim" to="." method="_on_porte_dr_zim_zim_body_entered"]
[connection signal="body_entered" from="porte_DrChirurgien" to="." method="_on_porte_dr_chirugien_body_entered"]
[connection signal="body_entered" from="porte_DrPsy" to="." method="_on_porte_dr_psy_body_entered"]
[connection signal="body_entered" from="porte_DrFamille" to="." method="_on_porte_dr_famille_body_entered"]
[connection signal="timeout" from="fondu_timer" to="." method="_on_fondu_timer_timeout"]
[connection signal="timeout" from="fondu_label" to="." method="_on_fondu_label_timeout"]
